--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Old Skool Sessions Chat Room</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>OSS Chat Room</title>
+    <meta name="description" content="Old Skool Sessions Chat Room" />
+    <meta name="author" content="OSS Chat Room" />
 
-    <meta property="og:title" content="subtle-shade-chat" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="OSS Chat Room" />
+    <meta property="og:description" content="Old Skool Sessions Chat Room" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://chat.supersoul.top/oss-chatroom-og.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:site" content="@lovable_dev" /> -->
+    <meta name="twitter:image" content="https://chat.supersoul.top/oss-chatroom-og.png" />
   </head>
 
   <body>
