--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <meta property="og:title" content="OSS Chat Room" />
     <meta property="og:description" content="Old Skool Sessions Chat Room" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://chat.supersoul.top/oss-chatroom-og.png" />
+    <meta property="og:image" content="https://djchucks.com/oss.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <!-- <meta name="twitter:site" content="@lovable_dev" /> -->
     <meta name="twitter:image" content="https://chat.supersoul.top/oss-chatroom-og.png" />
+    <link rel="icon" href="https://djchucks.com/oss.ico" />
   </head>
 
   <body>
